--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "dotfiles/vim/bundle/vim-colorschemes"]
 	path = dotfiles/vim/bundle/vim-colorschemes
 	url = https://github.com/jsatk/vim-colorschemes
+[submodule "dotfiles/oh-my-zsh"]
+	path = dotfiles/oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
