--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dotfiles/oh-my-zsh"]
 	path = dotfiles/oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
+[submodule "repos/powerline-fonts"]
+	path = repos/powerline-fonts
+	url = https://github.com/powerline/fonts
